# FL_Sunbiz_Scraper

./: .gitignore  README.md  all_coaches.csv  c_career.py  coach_career.csv  college_coach.ipynb  college_fb.ipynb  main.py  pyproject.toml  requirements.txt  scrape.py  settings.py  test.py  test_df.csv
data/: bio_details_born.csv  coach_at.csv  coaches.csv  schools.csv
formaters/: coaching_career.ipynb
scraped_data/: coach_details.csv  hc_relationship_table.csv  school_coach_table.csv
scrapers/: college_coach_details.ipynb  hc_relationship_table.py  school_coach_table.py
