[tool.poetry]
name = "fl-sunbiz-scraper"
version = "0.1.0"
description = "A scraper to collect Sunbiz business filings"
authors = ["Aric Chokey"]

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^2.12.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"
scrapelib = "^2.1.0"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
